@@ -25,11 +25,11 @@
         "chronograph": "git://github.com/CartoDB/chronographjs.git#0.1.0",
         "underscore": "~1.6.0",
         "step": "~0.0.5",
-        "grainstore": "git://github.com/CartoDB/grainstore.git#0.20.0",
+        "grainstore": "https://github.com/CartoDB/grainstore/tarball/0.21.0",
         "express": "~2.5.11",
         "tilelive": "~4.4.3",
-        "tilelive-mapnik": "0.6.9",
         "mapnik": "http://github.com/Vizzuality/node-mapnik/tarball/0.7.26-cdb1",
+        "tilelive-mapnik": "0.6.11",
         "semver": "~1.1.4",
         "redis-mpool": "git://github.com/CartoDB/node-redis-mpool.git#0.1.0",
         "carto": "http://github.com/CartoDB/carto/tarball/0.9.5-cdb3",
